--- a/TODO
+++ b/TODO
@@ -1,17 +1,25 @@
 
-Various items:
+ASAP:
 * ensure correct client and server object destruction
-* linux port (epoll)
-* resolve socket close issues: time wait, event loop
+* resolve socket close issues: time wait, event loop coordination
 * add task cleanup handlers
-* add task-local alloc & free
+* add task local storage (tls)
 * take care of dead tasks
 * add task cancel and kill
 * add timers and task sleep
-* resolve port destruction issues
+* resolve port destruction issues (refcount? capabilities?)
 * support signals
+* net I/O routines (read,write,readv,writev)
+* better scheduler (with task priorities)
+* x86 port
+
+Essential:
 * UDP servers
+* SSL servers
 * fs notifications
+* memory management:
+** region allocator
+** add task local memory alloc & free
 * configuration file parsing
 * command line argument parsing
 * worker threads
@@ -22,17 +30,13 @@ Various items:
 * statistics
 * failure trace records
 * performance instrumentation
-* better scheduler
+* arm port
 
-Ports:
-* x86
-* arm
-
-Memory:
-* buddy allocator
-* slab allocators
-* region allocator
-* garbage collection
+Enhancements:
+* memory management:
+** slab allocator (to base object pools on)
+** buddy allocator (for I/O buffers and slabs)
+** garbage collection
 
 Sample modules:
 * memcached
