Shorten the I/O event handling path.

--- a/TODO
+++ b/TODO
@@ -1,12 +1,8 @@
 
 ASAP:
 * devise generic net buffer mechanism
-* worker threads, multi-threaded task & work schedulers
-* network input handling now takes the following path:
-  event-loop task -> net I/O task -> master task -> worker (reader) task
-  Then transmitting the response might take he following path:
-  worker (reader) task -> net I/O task (mm_net_spawn_writer) -> master task -> worker (writer) task
-  Test the performance of this lengthy path and optimize if needed.
+* make net module core thread aware and safe
+* worker threads, work dealing between core threads
 * correct shutdown:
 ** ensure worker & master & aux tasks are finished
 ** ensure socket & server object destruction
