--- a/TODO
+++ b/TODO
@@ -1,42 +1,51 @@
 
 ASAP:
-* work dealing between worker threads
-* make net module thread aware and safe
-* correct shutdown:
-** ensure worker & master & aux tasks are finished
-** ensure socket & server object destruction
-* correct destruction:
-** ensure destroyed socket & server objects are not accessed anymore
-** ensure safe task & port objects destruction (refcount? capabilities? )
+* cross-core wait/signal mechanism
+* distributing sockets among cores
+* let futures run on other cores
+* memcache module enhancements:
+** use buffered net I/O and distributing sockets
+** use futures for commands
+** implement eviction
+** implement expiration
+** polish & optimize
+
+;;; At this point it becomes usable in simple cases and ready for benchmarks
+;;; against stock memcache.
 
 Essentials:
-* use non-blocking data structures instead of locks where possible
-* resolve socket close issues: time wait
-* support signals
-* UDP servers
-* SSL servers
-* fs notifications
-* system call threads
-* disk I/O threads
 * configuration file parsing
 * command line argument parsing
+* support signals
+* system call threads
+* resolve socket close issues: time wait
+* disk I/O threads
 * syslog
 * daemonize
 * statistics
+* UDP servers
+* SSL servers
+* DNS resolver
 * performance instrumentation
-* refine and finish memcache module:
-** eviction
-** expiration
+* use non-blocking data structures instead of locks where possible
+* refine memcache module:
 ** statistics
-** polish
-** optimize
 ** add UDP protocol support
 ** add binary protocol support
-** use multi-threaded workers
-* DNS resolver
+* correct object destruction and graceful shutdown:
+** ensure worker & master & aux tasks are finished on shutdown
+** ensure destroyed socket & server objects are not accessed anymore
+** ensure safe task & port objects destruction
+** refcount? capabilities? some form of SMR?
+
+Larger items:
 * HTTP module
+* persistence
+* replication
+* extension language
 
 Enhancements:
+* fs event notification
 * task local storage (tls)
 * reap dead tasks pending for too long
 * try to detect clock adjustments and reset realtime timers accordingly
