--- a/TODO
+++ b/TODO
@@ -1,8 +1,10 @@
 
 ASAP:
+* fix quit regression
 * cross-core wait/signal mechanism
 * distributing sockets among cores
 * let futures run on other cores
+* let ports work across cores
 * memcache module enhancements:
 ** use buffered net I/O and distributing sockets
 ** use futures for commands
