--- a/TODO
+++ b/TODO
@@ -1,10 +1,4 @@
 
-v 0.2
-=====
-
-* optimize memcache entry expiration checks
-* parallel polling mechanism
-
 v 0.3
 =====
 
@@ -16,23 +10,35 @@ v 0.3
 
 ;;; At this point it becomes ready to challenge stock memcached
 
-Essentials:
+v 0.4
+=====
+
+* enhance task sharing
+* re-evaluate combiners
+* cleanup and re-evaluate futures
+* parallel polling mechanism
+* ensure timer events are not starved by I/O
+* ensure open sockets are orderly destroyed on shutdown
+* support custom signal events
 * cleanup net and netbuf interfaces
-* ensure open sockets are destroyed on shutdown
-* support signals
-* system call threads
-* disk I/O threads
-* syslog
-* statistics
-* global lock counters
-* utf8 support for scan, json
-* float/double support for format, scan, json
+* enhance statistics
 * UDP servers
-* SSL servers
-* performance instrumentation
 * refine memcache module:
 ** statistics
 ** add UDP protocol support
+
+Undetermined
+============
+
+Essentials:
+* system call threads
+* disk I/O threads
+* syslog
+* global lock counters
+* utf8 support for scan, json
+* float/double support for format, scan, json
+* SSL servers
+* performance instrumentation
 
 Larger items:
 * NUMA support:
@@ -48,6 +54,7 @@ Larger items:
 * AF_PACKET and/or DPDK-based net I/O
 
 Low priority enhancements:
+* hires timers
 * DNS resolver
 * background workers
 * fs event notification
